welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:6: error: too many arguments for method colorier: ()Unit
  colorier(tableauCouleur);
          ^Array1:13: error: not found: value tableauCouleur
    tableauCouleur(i)=getCouleurSol();
    ^Array1:16: error: not found: value tableauCouleur
  tableauCouleur(5)=getCouleurSol();
  ^Array1:25: error: not found: value tableauCouleur
    setCouleurBrosse(tableauCouleur(i));
                     ^